--- a/src/configs/dataset/gsm8k.yaml
+++ b/src/configs/dataset/gsm8k.yaml
@@ -1,3 +1,5 @@
-max_new_tokens: 512
-temperature: 0.7
-stop_at_eos: true
+path: "openai/gsm8k"
+name: "main"
+split: "train"
+system_msg: "You are a helpful assistant. Solve the math problem step by step and then give the final answer."
+answer_instruction: "Show your reasoning, then clearly state the final answer on its own line."
